<?xml version="1.0"?>
<package format="2">
  <name>caffeine_description</name>
  <version>0.0.0</version>
  <description>The caffeine_description package</description>
  <maintainer email="kajanan@todo.todo">kajanan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
